@@ -1,3 +1,8 @@
+2010-02-20  Abel Cheung  <abelcheung@gmail.com>
+
+	* scorerender-admin.php:
+	- Encapsulate all functions inside ScoreRenderAdmin class.
+
 2010-02-18  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php:
